--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,16 @@
             <version>6.5.0</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.32.3.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/sqlite-jdbc-3.32.3.3.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
     <build>
